<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.annizhang.bitlyapp.CreateLink">

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="0dp"
        android:layout_height="589dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="7dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/my_links"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/link_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="Name" />

                    <ListView
                        android:id="@+id/listView"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:drawSelectorOnTop="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/create_link"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/editLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/long_link"
                        android:inputType="textPersonName"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/linkTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/link_title"
                        android:inputType="textPersonName"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editLink" />

                    <EditText
                        android:id="@+id/linkNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/link_note"
                        android:inputType="textPersonName"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linkTitle" />

                    <Button
                        android:id="@+id/button_makelink"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="152dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/holo_orange_light"
                        android:text="@string/button_makelink"
                        android:visibility="visible"
                        app:layout_constraintLeft_toRightOf="@+id/button_copy" />

                    <EditText
                        android:id="@+id/resultLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/result"
                        android:inputType="none"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linkTitle" />

                    <Button
                        android:id="@+id/button_copy"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="152dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"

                        android:background="@android:color/holo_orange_dark"
                        android:text="@string/button_copy"
                        android:visibility="invisible" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</android.support.constraint.ConstraintLayout>
